[package]
name = "pizza"
version = "0.0.0"
authors = ["iku <iku@cleesim.com>"]
description = "Placeholder"
documentation = "https://docs.rs/pizza"
homepage = "https://github.com/CleeSim/pizza"
repository = "https://github.com/CleeSim/pizza.git"
keywords = []
license = "MIT"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
